# dioptric

./: .gitattributes  .gitignore  26438-SLM-fourier-calibration_00000.h5  26438-SLM-fourier-calibration_00001.h5  26438-SLM-fourier-calibration_00002.h5  26438-SLM-fourier-calibration_00003.h5  26438-SLM-fourier-calibration_00004.h5  26438-SLM-fourier-calibration_00005.h5  NV_field_ASD_superparamagnetic.csv  NV_field_NSD_superparamagnetic.csv  README.md  TODO.md  affine_model.pkl  affine_transformation.h5  analysis_center.py  captured_image_raw.npy  cfm_control_pane-carr.py  cfm_control_pane-hahn-zfs_vs_t.py  cfm_control_pane-hahn.py  cfm_control_pane-purcell.py  cfm_control_pane-rabi.py  cfm_control_pane-template.py  cfm_control_panel-carr.py  cfm_control_panel-cfmi-rabi.py  cfm_control_panel-cfmiii.py  cfm_control_panel-rabi.py  cfm_control_panel-rabi_new.py  cfm_control_panel.py  cfm_control_panel_old.py  control_panel-purcell.py  control_panel-rabi.py  dioptric_box_authorization.json  environment.yml  environment_pip.yml  filePath.txt  galvo_Return_To_Center.py  labrad_manager.bat  magnetic_relaxation_10to100nm.csv  optimal_combined_values.txt  optimal_separation_and_goodness.txt  (+14 more)
Calculate_threshshold_plot_AG/: Data_4_21_200ms.json  Data_4_21_250ms.json  determine_charge_readout_dur.py  determine_readout_dur.py  photonstatistics.py
Inputs/: apd.py
MajorRoutinesOld/: Rabi.py  correlation.py  find_nv_center.py  find_nvs.py  find_resonance.py  find_resonance_edit.py  pulse_sequence.py  stationary_count.py
Miscellaneous/: AG Excersize1.py  beamSim.py  g_two.py  (+6 more)
(+3619 files in other folders)
