[project]
name = "dioptric"
dynamic = ["version"]
dependencies = [
  "python",
  "ipython",
  "pip",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pillow",
  "gitpython",
  "pandas",
  "pyqt",
  "pathos",
  "scipy",
  "keyring",
  "chardet",
  "numba",
  "pywin32",
  "scikit-image",
  "opencv",
  "colorutils",
  "nidaqmx",
  "pylabrad",
  "strenum",
  "twisted",
  "mpmath",
  "qualang-tools",
  "qm-qua",
  "pyserial",
  "PIPython",
  "pyvisa",
  "pulsestreamer",
  "boxsdk",
  "PyJWT",
  "ujson",
  "orjson"
]
