[project]
name = "dioptric"
dynamic = ["version"]
dependencies = [
  "ipython",
  "pip",
  "matplotlib",
  "numpy",
  "openpyxl",
  "pillow",
  "gitpython",
  "pandas",
  "pyqt6",
  "pathos",
  "scipy",
  "keyring",
  "chardet",
  "numba",
  "scikit-image",
  "opencv-python",
  "colorutils",
  "nidaqmx",
  "pylabrad",
  "strenum",
  "twisted",
  "mpmath",
  "qualang-tools",
  "qm-qua",
  "pyserial",
  "PIPython",
  "pyvisa",
  "pulsestreamer",
  "boxsdk",
  "PyJWT",
  "ujson",
  "orjson",
  "ftplib"
]
